--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,14 +7,21 @@ services:
     tty: true
     restart: unless-stopped
     image: ollama/ollama:${OLLAMA_DOCKER_TAG-latest}
-
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: ${OLLAMA_GPU_DRIVER-nvidia}
+              count: ${OLLAMA_GPU_COUNT-1}
+              capabilities:
+                - gpu
   open-webui:
     build:
       context: .
       args:
         OLLAMA_BASE_URL: '/ollama'
       dockerfile: Dockerfile
-    image: ghcr.io/open-webui/open-webui:${WEBUI_DOCKER_TAG-main}
+    image: chinkeonglam12345/coolui_linux:version0.2
     container_name: open-webui
     volumes:
       - open-webui:/app/backend/data
@@ -25,6 +32,7 @@ services:
     environment:
       - 'OLLAMA_BASE_URL=http://ollama:11434'
       - 'WEBUI_SECRET_KEY='
+      - 'WEBUI_NAME=367Garage'
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
